tests/NormalTests/paczka1/fuzzy1/52803130.err
Error in line 1: EpeB A57 34,9
Error in line 6: L3M05m A57 88,9
Error in line 10: L3M05m A514 58,2
Error in line 12: DAm5Ol1oBH A5; ;6,2
Error in line 19: L3M05m A57 51,7
Error in line 26: xP1jM S888 23,7
